// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main.lua - lua-verify: main.lua 1`] = `
tbl.a = 5
tbl.a().b().c().d().e()
tbl.loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong = 6

noParens  = bar:call()
yesParens = ("bar"):call()
yesParens = ({}):call()
yesParens = (1.9e1):call()
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tbl.a = 5
tbl.a().b().c().d().e()
tbl.loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong
= 6

noParens = bar:call()
yesParens = ("bar"):call()
yesParens = ({}):call()
yesParens = (1.9e1):call()
`;

exports[`main.lua - lua-verify: main.lua 2`] = `
tbl.a = 5
tbl.a().b().c().d().e()
tbl.loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong = 6

noParens  = bar:call()
yesParens = ("bar"):call()
yesParens = ({}):call()
yesParens = (1.9e1):call()
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tbl.a = 5
tbl.a().b().c().d().e()
tbl.loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong
= 6

noParens = bar:call()
yesParens = ('bar'):call()
yesParens = ({}):call()
yesParens = (1.9e1):call()
`;
